[tool.poetry]
name = "rag-research"
version = "0.1.0"
description = "Testing and implementiation of a basic RAG for research purposes"
authors = ["Scott <scowty.sk@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
